--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
     "@progress/kendo-angular-buttons": "^2.0.0",
+    "@progress/kendo-angular-dateinputs": "^1.4.3",
+    "@progress/kendo-angular-dropdowns": "^1.6.0",
+    "@progress/kendo-angular-excel-export": "^1.0.5",
+    "@progress/kendo-angular-grid": "^1.7.1",
+    "@progress/kendo-angular-inputs": "^1.4.2",
     "@progress/kendo-angular-l10n": "^1.0.5",
+    "@progress/kendo-data-query": "^1.1.2",
+    "@progress/kendo-drawing": "^1.4.1",
     "@progress/kendo-theme-bootstrap": "^2.10.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
