--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@progress/kendo-angular-excel-export": "^1.0.5",
     "@progress/kendo-angular-grid": "^1.7.1",
     "@progress/kendo-angular-inputs": "^1.4.2",
+    "@progress/kendo-angular-intl": "^1.3.0",
     "@progress/kendo-angular-l10n": "^1.0.5",
     "@progress/kendo-data-query": "^1.1.2",
     "@progress/kendo-drawing": "^1.4.1",
