--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
     "@progress/kendo-angular-buttons": "^2.0.0",
+    "@progress/kendo-angular-charts": "^1.4.0",
     "@progress/kendo-angular-dateinputs": "^1.4.3",
     "@progress/kendo-angular-dropdowns": "^1.6.0",
     "@progress/kendo-angular-excel-export": "^1.0.5",
@@ -47,6 +48,7 @@
     "@types/node": "~6.0.60",
     "bootstrap": "^4.0.0-beta.2",
     "codelyzer": "^4.0.1",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jquery": "^3.2.1",
