--- a/package.json
+++ b/package.json
@@ -12,57 +12,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/core": "^0.6.8",
+    "@angular/animations": "^6.0.9",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/http": "^6.0.9",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
+    "core-js": "^2.5.7",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
-    "@progress/kendo-angular-buttons": "^2.0.0",
-    "@progress/kendo-angular-charts": "^1.4.0",
-    "@progress/kendo-angular-dateinputs": "^1.4.3",
-    "@progress/kendo-angular-dropdowns": "^1.6.0",
-    "@progress/kendo-angular-excel-export": "^1.0.5",
-    "@progress/kendo-angular-grid": "^1.7.1",
-    "@progress/kendo-angular-inputs": "^1.4.2",
-    "@progress/kendo-angular-intl": "^1.3.0",
-    "@progress/kendo-angular-l10n": "^1.0.5",
-    "@progress/kendo-data-query": "^1.1.2",
-    "@progress/kendo-drawing": "^1.4.1",
-    "@progress/kendo-theme-bootstrap": "^2.10.0",
-    "@types/jasmine": "~2.8.3",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "^6.0.9",
+    "typescript": "^2.7.2",
+    "@angular/language-service": "^6.0.9",
+    "@progress/kendo-angular-buttons": "^4.1.2",
+    "@progress/kendo-angular-charts": "^3.3.0",
+    "@progress/kendo-angular-dateinputs": "^3.4.3",
+    "@progress/kendo-angular-dropdowns": "^3.0.2",
+    "@progress/kendo-angular-excel-export": "^2.1.1",
+    "@progress/kendo-angular-grid": "^3.5.1",
+    "@progress/kendo-angular-inputs": "^3.2.0",
+    "@progress/kendo-angular-intl": "^1.4.1",
+    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-data-query": "^1.4.0",
+    "@progress/kendo-drawing": "^1.5.6",
+    "@progress/kendo-theme-bootstrap": "^2.13.6",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "bootstrap": "^4.0.0-beta.2",
-    "codelyzer": "^4.0.1",
+    "@types/node": "~10.5.2",
+    "bootstrap": "^4.1.1",
+    "codelyzer": "^4.4.2",
     "hammerjs": "^2.0.8",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "jquery": "^3.2.1",
-    "karma": "~2.0.0",
+    "jquery": "^3.3.1",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "lite-server": "^2.3.0",
-    "popper.js": "^1.12.9",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "lite-server": "^2.4.0",
+    "popper.js": "^1.14.3",
+    "protractor": "~5.3.2",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.10.0"
   }
 }
